Fixed issue with maps api not appearing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,11 @@ nav a {
     background-image: url("https://i.imgur.com/LmWAgSf.jpg");
 }
 
+#map-btn-container{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .map-buttons{
     padding: 15px;
     text-align: center;
@@ -231,6 +236,18 @@ nav a {
     text-align: center;
     font-size: 10vw;
     margin-bottom: 5px;
+}
+
+#map-container{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0px 40px 0px;
+}
+
+#map{
+    width: 80%;
+    height: 35vh;
+    max-height: 600px;
 }
 
 /* Events */
